<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_true"/>

        <Button
            android:id="@+id/button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_false"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cheat"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"
            android:text="@string/button_prev"
            android:contentDescription="Prev"/>

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_right"
            android:text="@string/button_next"
            android:contentDescription="@string/button_next"/>
    </LinearLayout>

</LinearLayout>